--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test": "mocha test"
   },
   "dependencies": {
-    "dv.data": "1.3.0",
+    "dv.data": "git+https://github.com/carlosgalveias/node-dv.data.git",
     "nan": "^2.6.2",
     "node-gyp": "3.x"
   },
